# bcv-rate-scrapper

./: .gitignore  README.es.md  README.md  pyproject.toml  requirements.txt  script.sh
bcv_scraper/: config.py  excel_scrap.py
bcv_scrapper/: web_scrap.py
src/: excel_scrap.py  web_scrap.py
